2007-06-25  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #334140

	* bbdb.c: (bbdb_do_it): Strip '\"' out of name part, if exists.

2007-06-07  Gilles Dartiguelongue  <dartigug@esiee.fr>

	* gaimbuddies.c: (get_node_text), (parse_contact): more compilation
	warnings cleanup, completes bug #437584 fixes

2007-05-14  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #414195 from Loïc Minier

	* Makefile.am:

2007-05-11  Gilles Dartiguelongue  <dartigug@esiee.fr>

	* gaimbuddies.c: (bbdb_sync_buddy_list_check),
	(bbdb_get_gaim_buddy_list), (get_node_text), (parse_contact),
	(parse_buddy_group): add casts to clear compilation warnings,
	Fixes part of bug #437584

2007-04-02  Sankar P  <psankar@novell.com>

	* Committed on behalf of Gilles Dartiguelongue <dartigug@esiee.fr>

	* org-gnome-evolution-bbdb.eplug.xml:
	Cleanup. 
	Fixes part of #301149

2007-03-29  Matthew Barnes  <mbarnes@redhat.com>

	* gaimbuddies.c:
	Fix "incompatible pointer type" warnings (#360619).

2007-03-20  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #419524

	* Include <glib/gi18n.h> instead of <libgnome/gnome-i18n.h>.

2006-08-17  Kjartan Maraas  <kmaraas@gnome.org>

	* gaimbuddies.c: (bbdb_sync_buddy_list_check): Don't leak
	the file path here.

2006-08-17  Kjartan Maraas  <kmaraas@gnome.org>

	* bbdb.c: (bbdb_open_addressbook),
	(create_addressbook_option_menu): Plug a couple leaks.

2006-08-03  Devashish Sharma  <sdevashish@novell.com>

	* bbdb.c: Gaim and automatic contacts were not seen until
	evolution is restarted. 
	Fix for Bug #346180, 349371, 346353

2006-07-18  Ross Burton  <ross@openedhand.com>

	* gaimbuddies.c:
	Fix for EContactPhoto change.  Partially fixed by Hiroyuki Ikezoe
	<poincare@ikezoe.net>, rest by me.  (#347870)

2006-07-12  Andre Klapper  <a9016009@gmx.de>

	* bbdb.c: Marking two strings for translation that were accidentally
	not marked. Fixes bug #347312.

2006-02-14  Andre Klapper <a9016009@gmx.de>
